# english-to-hindi-roman

./: .gitignore  README.md  main.py  pyproject.toml  run_playwright_tests.py  setup_playwright.py  translate_files.py
.github/: copilot-instructions.md
.github/prompts/: english-to-hindi-roman.prompt.md
api/: __init__.py  app.py  models.py
docs/: API_README.md  FILE_MERGER.md  FILE_SPLITTER.md  FILE_TRANSLATOR.md  GENERIC_FILE_SPLITTER.md  POSTMAN_GUIDE.md  QUICKSTART.md  SSL_TROUBLESHOOTING.md  VALIDATION_REPORT.md
mytest/: split_story.py
tests/: analyze_output.py  conftest.py  split_story_31_10.py  test_all_postman_requests.py  test_api.py  test_api_endpoint.py  test_api_simple.py  test_file_merger.py  test_file_splitter.py  test_file_translator.py  test_postman_request.py  test_restructure.py  test_ssl_fix.py  test_translator.py  validate_translation.py
utility/: __init__.py  complete_workflow.py  demo_file_merger.py  demo_file_splitter.py  demo_file_translator.py  demo_generic_splitter.py  demo_transliteration.py  file_merger.py  file_splitter.py  file_translator.py  fix_ssl.py  generic_file_merger.py  generic_file_splitter.py  playwright_translator.py  translator.py
utility/inputfile/: story.txt
utility/outputfile/: story_hinglish.txt
